--- a/themes/slender-custom/layouts/partials/header.html
+++ b/themes/slender-custom/layouts/partials/header.html
@@ -26,7 +26,7 @@
             {{ end }}
         </title>
     </head>
-    <body class="color-scheme-{{ .Site.Params.colorscheme }}">
+    <body>
         <div class="container">
             <header>
                 <nav>
