Article listing links black
Signed-off-by: ChubbyHunteR <luka.strizic@hotmail.com>

--- a/themes/slender-custom/static/css/slender-color-schemes.css
+++ b/themes/slender-custom/static/css/slender-color-schemes.css
@@ -15,6 +15,10 @@ header a, footer a {
     color: #FFF;
 }
 
+#article-listing a{
+	color: #000;
+}
+
 .article-read-more a,
 .pagination li a {
     color: #151515;
