--- a/themes/slender-custom/layouts/partials/header.html
+++ b/themes/slender-custom/layouts/partials/header.html
@@ -10,7 +10,7 @@
         <meta property="og:locale" content="{{ .Site.LanguageCode }}">
         <meta name="author" content="{{ .Site.Author.name }}">
         <meta name="description" content="{{ if ne .Description "" }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
-		<!-- Internet claims keywords are more or less useless. http://webmasters.stackexchange.com/questions/6/do-meta-keywords-have-any-impact-on-ranking-algorithms -->
+	<!-- Internet claims keywords are more or less useless. http://webmasters.stackexchange.com/questions/6/do-meta-keywords-have-any-impact-on-ranking-algorithms -->
         <!-- <meta name="keywords" content="{{ with .Keywords }}{{ delimit . ", " }}{{ else }}{{ .Site.Params.keywords }}{{ end }}"> -->
         {{ .Hugo.Generator }}
         <link rel="icon" href="{{ "/assets/favicon.ico" | absURL }}" type="image/x-icon"> 
@@ -43,11 +43,12 @@
                     <h1 class="brand">{{ .Site.Title }}</h1>
                     <aside>
                         <p>{{ .Site.Params.tagline | safeHTML }}</p>
+			<!-- http://wbwip.com/wbw/emailencoder.html -->
                         <p>
 							<script language="JavaScript"><!-- 
-							HSrhgyRiUiDrIQcdEPtsYXKA="&#108;&#117;k&#97;&#43;0&#50;&#49;6"
+							HSrhgyRiUiDrIQcdEPtsYXKA="l&#117;&#107;&#097;&#046;&#115;&#116;&#114;&#105;&#122;&#105;c"
 							HTiAmpczehBldNEEXRhPttEvTzsKhkmGQar="&#64;"
-							gQMapyymrPfHfqOtrfTsbPjwkIze="&#115;&#116;r&#105;&#122;i&#99;&#46;i&#110;&#102;o"
+							gQMapyymrPfHfqOtrfTsbPjwkIze="h&#111;&#116;&#109;&#097;&#105;&#108;&#046;&#099;&#111;m"
 							tdyFjpEXZJEKzTTDzTcntbP="<i class='fa fa-envelope'></i>"
 							document.write("<a href='mailto:"+HSrhgyRiUiDrIQcdEPtsYXKA+""+HTiAmpczehBldNEEXRhPttEvTzsKhkmGQar+""+gQMapyymrPfHfqOtrfTsbPjwkIze+""+"'>"+tdyFjpEXZJEKzTTDzTcntbP+"<\/a>")
 							// --></script>
